Add before & after example

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
-
+ 
 p::before{
-  content: '';
-
-  display: block;
-
+  content: '>>>>>';
   color: red;
   background-color: green;
-  width: 50px;
-  height: 50px;
+}
+
+p::after{
+  content: '<<<<<';
+  color: red;
+  background-color: green;
 }
 
 p{
