Add nav hover example

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,109 @@
- 
-p::before{
-  content: '>>>>>';
-  color: red;
-  background-color: green;
+* {
+  box-sizing: border-box;
 }
 
-p::after{
-  content: '<<<<<';
-  color: red;
-  background-color: green;
+body {
+  font-family: sans-serif;
+  min-height: 300vh;
 }
 
-p{
-  border: 1px solid black;
+.page-header {
+  padding: 1.2em 1.8em;
+  border-bottom: 1px solid black;
+
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 10;
+
+  box-shadow: 0px -32px 85px 0px rgba(0, 0, 0, 0.66);
+  background-color: white;
 }
 
-ul{
-  list-style: none;
+.list {
+  font-size: 0;
 }
-/* li::before{
-  content: url('../images/icons/access-point.svg');
-} */
 
-li{
-  color: white;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  background-color: teal;
-  width: 80%;
+.list-item {
+  display: inline-block;
+  font-size: 16px;
+}
+
+.list-item + .list-item {
+  margin-left: 1.2em;
+}
+
+.link {
+  display: inline-block;
+
   position: relative;
-  text-align: center;
+
+  padding: 0.7em 2em;
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid black;
+
+  transition-property: all;
+  transition-duration: 0.3s;
 }
-li::before, li::after{
-  color: black;
-  font-size: 2em;
+
+.link:hover,
+.link:focus {
+  outline: 0;
+  background-color: teal;
+  color: white;
+  box-shadow: 0px 0px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.link:active {
+  box-shadow: inset 0px 0px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.link::after,
+.link::before {
+  content: "";
+  display: block;
+
   position: absolute;
+
+  transition: width ease-in-out 0.3s;
+
+  width: 0px;
+  height: 0.5em;
 }
-li::before{
-  content:  open-quote;
-  right: calc(100% + 5px);
-  top: -0.5em;
+
+.link::after {
+  top: 115%;
+  left: 0;
+  background-image: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 31%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
-li::after{
-  content: close-quote;
-  left: calc(100% + 5px);
-  bottom: -0.9em;
+
+.link::before {
+  bottom: 115%;
+  right: 0;
+  background-image: linear-gradient(
+    90deg,
+    rgba(0, 212, 255, 1) 0%,
+    rgba(9, 9, 121, 1) 69%,
+    rgba(2, 0, 36, 1) 100%
+  );
+}
+
+.link:hover::after,
+.link:hover::before {
+  width: 100%;
+}
+
+main {
+  margin-top: 100px;
+}
+
+p {
+  text-shadow: -4px -2px 11px rgba(150, 150, 150, 0.9);
 }
